--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.3",
-    "firebase": "^10.11.0",
+    "firebase": "^10.11.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.22.3",
-    "styled-components": "^6.1.8"
+    "react-spring-3d-carousel": "^1.3.4",
+    "styled-components": "^6.1.8",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
